--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -6,3 +6,11 @@
   year={2013},
   organization={IEEE}
 }
+
+@article{sisr1,
+  title={A two-stage attentive network for single image super-resolution},
+  author={Zhang, Jiqing and Long, Chengjiang and Wang, Yuxin and Piao, Haiyin and Mei, Haiyang and Yang, Xin and Yin, Baocai},
+  journal={IEEE Transactions on Circuits and Systems for Video Technology},
+  year={2021},
+  publisher={IEEE}
+}
