--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,13 +1,4 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
-}
-
-@article{sisr1,
+@article{zhang2021two,
   title={A two-stage attentive network for single image super-resolution},
   author={Zhang, Jiqing and Long, Chengjiang and Wang, Yuxin and Piao, Haiyin and Mei, Haiyang and Yang, Xin and Yin, Baocai},
   journal={IEEE Transactions on Circuits and Systems for Video Technology},
