--- a/content/publication/multi-domain-collaborative-feature-representation-for-robust-visual-object-tracking-（the-visual-computer-2021-proc-cgi-2021-）/cite.bib
+++ b/content/publication/multi-domain-collaborative-feature-representation-for-robust-visual-object-tracking-（the-visual-computer-2021-proc-cgi-2021-）/cite.bib
@@ -1,8 +1,8 @@
-@article{zhang2021multidomain,
-  title={Multi-domain Collaborative Feature Representation for Robust Visual Object Tracking},
-  author={Jiqing Zhang and Kai Zhao and Bo Dong and Yingkai Fu and Yuxin Wang and Xin Yang and Baocai Yin},
+@article{zhang2021multi,
+  title={Multi-domain collaborative feature representation for robust visual object tracking},
+  author={Zhang, Jiqing and Zhao, Kai and Dong, Bo and Fu, Yingkai and Wang, Yuxin and Yang, Xin and Yin, Baocai},
   journal={The Visual Computer},
+  pages={1--13},
   year={2021},
   publisher={Springer}
 }
-
